cleaned shit up

--- a/index.html
+++ b/index.html
@@ -48,12 +48,6 @@
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
          <h1 class = "fade">Suraj Bansal</h1>
-         <!-- <h3 class = "text-emphasis fade">I'M A
-            <span
-               class="txt-rotate fade"
-               data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR ENTHUSIAST"]'></span>
-         </h3> -->
          <div class="fixed">
             <div class="content">
                <div class="content__container">
@@ -65,15 +59,7 @@
                  </ul>
                </div>
              </div>
-         </div>
-         <!-- <ul class="socials fa-ul">
-            <li class="individual-social"><a href="malito:bansas14@mcmaster.ca" target="_blank" class = "fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
-            <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "fade"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
-            <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "fade"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
-            <li class="individual-social"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank" class = "fade"><i class="fa-li fa fab fa-linkedin fa-2x"></i></a></li>
-            <li class="individual-social"><a href="https://medium.com/@bansalsuraj03" target="_blank" class = "fade"><i class="fa-li fa fab fa-medium fa-2x"></i></a></li>
-         </ul> -->
-         
+         </div>        
          <div class="nav">
             <ul class="nav-links">
                <li class = "fade"><a href="#software-projects"><span>Portfolio</span></a></li>
@@ -216,128 +202,6 @@
          <div class="container center-text high-emphasis-text italicize cta fade">
             <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
-
-      <!-- 
-         <div class="swiper-container">
-            <div class="swiper-wrapper">
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Student Researcher</h5>
-                     <h6>Princess Margaret Cancer Centre, UHN</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Summer Student</h5>
-                     <h6>Department of Medical Biophysics, UofT</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Prime Minister</h5>
-                     <h6>York Region Presidents' Council</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Project Developer</h5>
-                     <h6>Ryde AI</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Project Consultant</h5>
-                     <h6>Sidewalk Labs</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Project Consultant</h5>
-                     <h6>Kidogo Co.</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Summer Shadow</h5>
-                     <h6>Baylor Scott and White Health</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/bswhealth.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Summer Student</h5>
-                     <h6>St. Michael's Research Centre</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Student Co-Chair</h5>
-                     <h6>TEDxYouth Toronto</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/tedx.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Website Developer</h5>
-                     <h6>Frontline Connect Canada</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Director of Logistics</h5>
-                     <h6>Richmond Hill Mayor's Youth Action Committee</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/yac.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Teaching Assistant</h5>
-                     <h6>Karnataka Centre for Developmental Disabilities</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/ssk.png" style = "width:65px;height65px">
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="swiper-buttons">
-            <div class="swiper-button-next fade"></div>
-            <div class="swiper-button-prev fade"></div>
-         </div>
-         <div class="container center-text high-emphasis-text italicize cta fade">
-            <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
-         </div>
-      -->
       </section>
       <!-- Software Projects -->
       <section class="section section-2" id="software-projects">
@@ -347,21 +211,21 @@
             </div>
             <div class="project-grid">
                <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/aryanmisra/ryde" target = "_blank">Ryde AI</a></h5>
-                  <p>Open-source L2 self-driving car software to democratize autonomous vehicles with your smartphone.</p>
-                  <div class="project-row">
-                     <span class="dot-python"></span>
-                     <p>Python</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
-                  </div>
-               </div>
-               <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Analysis</a></h5>
                   <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al). I contributed to data analysis for Figure 5.</p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More!</a></h6>
+                  </div>
+               </div>
+               <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/aryanmisra/ryde" target = "_blank">Ryde AI</a></h5>
+                  <p>Open-source L2 self-driving car software to democratize autonomous vehicles with your smartphone.</p>
+                  <div class="project-row">
+                     <span class="dot-python"></span>
+                     <p>Python</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -382,15 +246,6 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <!-- <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/frontline-connect-canada" target = "_blank">Frontline Connect Website</a></h5>
-                  <p>Developed the website for a physician-led grassroots Covid-19 relief initiative targeting virtual communication in hospitals.</p>
-                  <div class="project-row">
-                     <span class="dot-html"></span>
-                     <p>HTML</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
-                  </div>
-               </div> -->
             </div>
          </div>
       </section>
@@ -452,9 +307,6 @@
          </div>
       </section>
    </div>
-
-
-
    <div class="mobile">
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
@@ -475,7 +327,6 @@
                </div>
             </div>
          </div>
-         <!-- <h3 class = "text-emphasis center-text descriptor">Learning, unlearning, and relearning.</h3> -->
          <ul class="socials center-text fa-ul">
             <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "bounce"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "bounce"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
@@ -629,6 +480,15 @@
                <h2>Software Projects</h2>
             </div>
             <div class="project-grid">
+               <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies</a></h5>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper. I contributed to the Figure 5 notebooks.</p>
+                  <div class="project-row">
+                     <span class="dot-jupyter-notebook"></span>
+                     <p>Jupyter Notebook</p>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More</a></h6>
+                  </div>
+               </div>
                <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/aryanmisra/ryde" target = "_blank">Ryde AI</a></h5>
                   <p>Open-source L2 self-driving car software to democratize autonomous vehicles with your smartphone.</p>
@@ -636,15 +496,6 @@
                      <span class="dot-python"></span>
                      <p>Python</p>
                      <h6 class = "low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More</a></h6>
-                  </div>
-               </div>
-               <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies</a></h5>
-                  <p>Repository of analysis notebooks and data for AML hierarchies paper. I contributed to the Figure 5 notebooks.</p>
-                  <div class="project-row">
-                     <span class="dot-jupyter-notebook"></span>
-                     <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
