--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
          </div>        
          <div class="nav">
             <ul class="nav-links">
-               <li class = "fade"><a href="#software-projects"><span>Portfolio</span></a></li>
                <li class = "fade"><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
+               <li class = "fade"><a href="https://scholar.google.com/citations?user=KKKWvHkAAAAJ&hl=en" target = "_blank"><span>Google Scholar</span></a></li>
                <li class = "fade"><a href="#contact"><span>Contact Me</span></a></li>
             </ul>         
          </div>
@@ -286,6 +286,13 @@
                   <li>
                      <a href="https://twitter.com/surajbansal2003" target="_blank">Twitter</a>
                   </li>
+                  <li>
+                     <p>|</p>
+                  </li>
+                  <li>
+                     <a href="https://scholar.google.com/citations?user=KKKWvHkAAAAJ&hl=en" target="_blank">Google Scholar</a>
+                  </li>
+                  
                   <li>
                      <p>|</p>
                   </li>
