--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Editor</h5>
+                     <h5>Staff Writer & Editor</h5>
                      <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
                   <div class="experience-logo">
@@ -395,7 +395,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Editor</h5>
+                     <h5>Staff Writer & Editor</h5>
                      <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
                   <div class="experience-logo">
