--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. I'm an aspiring clinician-scientist with diverse research interests in precision medicine, stem cell biology, and translational cancer genomics. You'll usually catch me exploring Toronto's culinary landscape, strumming my acoustic guitar, or enjoying some post-workout Chipotle. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, my current research interrogates a combination of single-cell omic, pharmacogenomic, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. This summer, I'm supported by the <a href="https://tcairem.utoronto.ca/summer-research-studentships" target="_blank" class="text-emphasis p-bold p-spaced-underline">T-CAIREM studentship</a> in developing a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Toronto's culinary landscape, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                
                <div class = "about-image fade">
-                  <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj.jpg" style = "width:300px;height:300px">
                </div>
             </div>
          </div>
@@ -100,6 +100,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Summer Research Studentship</h5>
+                     <h6>T-CAIREM, UofT</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/tcairem.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow fade">
@@ -216,7 +225,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.biorxiv.org/content/10.1101/2022.01.25.476266v1" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -355,7 +364,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm currently a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. I'm an aspiring clinician-scientist with diverse research interests in precision medicine, stem cell biology, and translational cancer genomics. You'll usually catch me exploring Toronto's culinary landscape, strumming my acoustic guitar, or enjoying some post-workout Chipotle. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, my current research interrogates a combination of single-cell omic, pharmacogenomic, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. This summer, I'm supported by the <a href="https://tcairem.utoronto.ca/summer-research-studentships" target="_blank" class="text-emphasis p-bold p-spaced-underline">T-CAIREM studentship</a> in developing a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Toronto's culinary landscape, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
@@ -382,6 +391,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Summer Research Studentship</h5>
+                     <h6>T-CAIREM, UofT</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/tcairem.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow fade">
@@ -493,7 +511,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.biorxiv.org/content/10.1101/2022.01.25.476266v1" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade-mobile">
