--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Staff Writer & Editor</h5>
+                     <h5>Managing Editor</h5>
                      <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
                   <div class="experience-logo">
@@ -413,7 +413,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Staff Writer & Editor</h5>
+                     <h5>Managing Editor</h5>
                      <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
                   <div class="experience-logo">
