--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                </div>
                
                <div class = "about-image fade">
-                  <img src="assets/images/suraj.jpg" style = "width:300px;height:300px">
+                  <img src="assets/images/suraj_talk.jpg" style = "width:300px;height:300px">
                </div>
             </div>
          </div>
@@ -367,7 +367,7 @@
                   <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, my current research interrogates a combination of single-cell omic, pharmacogenomic, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. This summer, I'm supported by the <a href="https://tcairem.utoronto.ca/summer-research-studentships" target="_blank" class="text-emphasis p-bold p-spaced-underline">T-CAIREM studentship</a> in developing a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Toronto's culinary landscape, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
-                  <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj_talk.jpg" style = "width:250px;height:250px">
                </div>
             </div>
          </div>
