--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                    <li class="content__container__list__item">STUDENT RESEARCHER</li>
                    <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
                    <li class="content__container__list__item">COFFEE ENTHUSIAST</li>
-                   <li class="content__container__list__item">CERTIFIED FOODIE</li>
+                   <li class="content__container__list__item">AMATEUR CHEF</li>
                  </ul>
                </div>
              </div>
@@ -75,11 +75,11 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Level 2 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, my current research interrogates a combination of single-cell omic, pharmacogenomic, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. This summer, I'm supported by the <a href="https://tcairem.utoronto.ca/summer-research-studentships" target="_blank" class="text-emphasis p-bold p-spaced-underline">T-CAIREM studentship</a> in developing a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Toronto's culinary landscape, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a second-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell transcriptomic, machine learning, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. I'm currently building a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                
                <div class = "about-image fade">
-                  <img src="assets/images/suraj_talk.jpg" style = "width:300px;height:300px">
+                  <img src="assets/images/suraj_2023_2.jpg" style = "width:300px;height:300px">
                </div>
             </div>
          </div>
@@ -104,8 +104,26 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
+                     <h5>Research Student</h5>
+                     <h6>Hamilton Social Medicine Response Team (HAMSMaRT)</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/hamsmart.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>McMaster University</h5>
+                     <h6>President's Advisory Committee (PACBIC)</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/mcmaster.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
                      <h5>Summer Research Studentship</h5>
-                     <h6>T-CAIREM, UofT</h6>
+                     <h6>UofT T-CAIREM</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/tcairem.png" style = "width:65px;height65px">
@@ -126,7 +144,16 @@
                      <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/meducator.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/meducator_white.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>National Youth Advisory Council</h5>
+                     <h6>CAMH</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/camh.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow fade">
@@ -225,7 +252,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.biorxiv.org/content/10.1101/2022.01.25.476266v1" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -337,7 +364,7 @@
                         <li class="content__container__list__item">STUDENT RESEARCHER</li>
                         <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
                         <li class="content__container__list__item">COFFEE ENTHUSIAST</li>
-                        <li class="content__container__list__item">CERTIFIED FOODIE</li>
+                        <li class="content__container__list__item">AMATEUR CHEF</li>
                      </ul>
                   </div>
                </div>
@@ -364,10 +391,10 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, my current research interrogates a combination of single-cell omic, pharmacogenomic, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. This summer, I'm supported by the <a href="https://tcairem.utoronto.ca/summer-research-studentships" target="_blank" class="text-emphasis p-bold p-spaced-underline">T-CAIREM studentship</a> in developing a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Toronto's culinary landscape, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a second-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell transcriptomic, machine learning, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. I'm currently building a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
-                  <img src="assets/images/suraj_talk.jpg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj_2023_2.jpg" style = "width:250px;height:250px">
                </div>
             </div>
          </div>
@@ -395,8 +422,26 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
+                     <h5>Research Student</h5>
+                     <h6>Hamilton Social Medicine Response Team (HAMSMaRT)</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/hamsmart.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>McMaster University</h5>
+                     <h6>President's Advisory Committee (PACBIC)</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/mcmaster.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
                      <h5>Summer Research Studentship</h5>
-                     <h6>T-CAIREM, UofT</h6>
+                     <h6>UofT T-CAIREM</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/tcairem.png" style = "width:65px;height65px">
@@ -483,15 +528,6 @@
                      <img src="assets/images/logos/tedx.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Head of Technology</h5>
-                     <h6>Frontline Connect Canada</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
-                  </div>
-               </div>
             </div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade-mobile">
@@ -511,7 +547,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.biorxiv.org/content/10.1101/2022.01.25.476266v1" target = "_blank">Learn More</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade-mobile">
