--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a second-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell transcriptomic, machine learning, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. I'm currently building a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a third-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                
                <div class = "about-image fade">
@@ -152,7 +152,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Managing Editor</h5>
+                        <h5>Editor-in-Chief</h5>
                         <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                      </div>
                      <div class="experience-logo">
@@ -163,11 +163,33 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>National Youth Advisory Council</h5>
-                        <h6>CAMH</h6>
+                        <h5>Founding Chairman</h5>
+                        <h6>National Council of Undergraduate Academia</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/ncoua.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>National Youth Advisor</h5>
+                        <h6>Center for Addiction and Mental Health (CAMH)</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/camh.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Project Member</h5>
+                        <h6>Hamilton Homelessness Mortality Project</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/hamsmart.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -196,7 +218,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Research Volunteer</h5>
+                        <h5>Research Assistant</h5>
                         <h6>St. Michael's Research Centre</h6>
                      </div>
                      <div class="experience-logo">
@@ -251,7 +273,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Head of Technology</h5>
+                        <h5>Technology Lead</h5>
                         <h6>Frontline Connect</h6>
                      </div>
                      <div class="experience-logo">
@@ -279,7 +301,7 @@
             <div class="project-grid">
                <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Analysis</a></h5>
-                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al). I contributed to data analysis for Figure 5.</p>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al, Nature Medicine 2022). </p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
@@ -305,12 +327,12 @@
                   </div>
                </div>
                <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target = "_blank">Polyp Detection</a></h5>
-                  <p>Leveraged convolutional neural networks to achieve an accuracy rate 20% higher than industry.</p>
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">ATLAS-AML</a></h5>
+                  <p>A cloud-powered bioinformatics pipeline for streamlined drug target characterization and identification in AML.</p>
                   <div class="project-row">
-                     <span class="dot-python"></span>
-                     <p>Python</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More!</a></h6>
+                     <span class="dot-R"></span>
+                     <p>R</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
             </div>
@@ -422,7 +444,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a second-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell transcriptomic, machine learning, and bioinformatic approaches to understand how cancer proliferates and becomes resistant to chemotherapy. I'm currently building a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or working out. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a third-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/suraj_2023_2.jpg" style = "width:250px;height:250px">
@@ -500,7 +522,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Managing Editor</h5>
+                        <h5>Editor-in-Chief</h5>
                         <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                      </div>
                      <div class="experience-logo">
@@ -511,11 +533,33 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>National Youth Advisory Council</h5>
-                        <h6>CAMH</h6>
+                        <h5>Founding Chairman</h5>
+                        <h6>National Council of Undergraduate Academia</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/ncoua.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>National Youth Advisor</h5>
+                        <h6>Center for Addiction and Mental Health (CAMH)</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/camh.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Project Member</h5>
+                        <h6>Hamilton Homelessness Mortality Project</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/hamsmart.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -544,7 +588,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Research Volunteer</h5>
+                        <h5>Research Assistant</h5>
                         <h6>St. Michael's Research Centre</h6>
                      </div>
                      <div class="experience-logo">
@@ -599,7 +643,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Head of Technology</h5>
+                        <h5>Technology Lead</h5>
                         <h6>Frontline Connect</h6>
                      </div>
                      <div class="experience-logo">
@@ -608,7 +652,7 @@
                   </div>
                </div>
             </div>
-         </div>
+         </div>   
          <div class="container center-text high-emphasis-text italicize cta fade-mobile">
             <h6>Interested in working together? Lets make it happen — here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
@@ -621,39 +665,39 @@
             </div>
             <div class="project-grid">
                <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies</a></h5>
-                  <p>Repository of analysis notebooks and data for AML hierarchies paper. I contributed to the Figure 5 notebooks.</p>
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Paper</a></h5>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al, Nature Medicine 2022). </p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More</a></h6>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce fade-mobile">
+               <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/aryanmisra/ryde" target = "_blank">Ryde AI</a></h5>
                   <p>Open-source L2 self-driving car software to democratize autonomous vehicles with your smartphone.</p>
                   <div class="project-row">
                      <span class="dot-python"></span>
                      <p>Python</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More</a></h6>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/wlawt/synbiolic" target = "_blank">Synbiolic</a></h5>
-                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist) </p>
+                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist.)</p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More</a></h6>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce fade-mobile">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target = "_blank">Polyp Detection</a></h5>
-                  <p>Leveraged convolutional neural networks to achieve an accuracy rate 20% higher than industry.</p>
+               <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">ATLAS-AML</a></h5>
+                  <p>A cloud-powered bioinformatics pipeline for streamlined drug target characterization and identification in AML.</p>
                   <div class="project-row">
-                     <span class="dot-python"></span>
-                     <p>Python</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More</a></h6>
+                     <span class="dot-R"></span>
+                     <p>R</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
             </div>
